# smarket

./: .gitignore  CMakeLists.txt  README.md  childProcess.c  childProcess.h  makefile  server.c  socket.c  socket.h
src/: CMakeLists.txt  childProcess.c  server.c  socket.c  socket.h
src/Apps/: CMakeLists.txt
src/Apps/Api/: Api.c  CMakeLists.txt
src/Apps/Api/App/: App.c  App.h  CMakeLists.txt
src/Apps/Api/Router/: CMakeLists.txt  Router.c  Router.h  RouterConfig.c  RouterConfig.h
src/Apps/Api/Routes/: CMakeLists.txt  Routes.c  Routes.h
src/Apps/Api/Routes/Payment/: CMakeLists.txt  Payment.c  Payment.h
src/Apps/Api/Routes/Seed/: CMakeLists.txt  Seed.c  Seed.h
src/Apps/SensorManager/: CMakeLists.txt  SensorManager.c
src/Models/: CMakeLists.txt  Models.c  Models.h
src/libs/: CMakeLists.txt
src/libs/MercuryApi/: CMakeLists.txt  ReadRFIDTags.c  ReadRFIDTags.h
src/util/: CMakeLists.txt
src/util/Boolean/: Boolean.h
src/util/ChildProcess/: CMakeLists.txt
src/util/Cstrings/: CMakeLists.txt  Cstrings.c  Cstrings.h
src/util/Cstrings/tests/: CMakeLists.txt  formatedCStringSize.test.c
src/util/Http/: CMakeLists.txt  http.c  http.h
src/util/Http/Response/: CMakeLists.txt  Response.c  Response.h  Response.test.c
src/util/JsonParser/: CMakeLists.txt  JsonParser.c  JsonParser.h  JsonParser.test.c
src/util/JsonParser/NumberParser/: CMakeLists.txt  NumberParser.c  NumberParser.h  NumberParser.test.c
src/util/Logger/: CMakeLists.txt  Logger.c  Logger.h
src/util/Map/: CMakeLists.txt  List.test.c  Map.c  Map.h
src/util/Map/MapEntry/: CMakeLists.txt  MapEntry.c  MapEntry.h  MapEntry.test.c
src/util/ReadTags/: CMakeLists.txt  ReadTags.c  ReadTags.h
src/util/Socket/: CMakeLists.txt  socket.c  socket.h
src/util/TCP/: CMakeLists.txt  TCP.c  TCP.h
src/util/TestSuite/: CMakeLists.txt  TestSuite.c  TestSuite.h  switchString.h
tests/: CMakeLists.txt  MapEntryTest.c  MapTest.c  cstrings_test.c
