add_executable(Cstrings_Test cstrings_test.c)
target_link_libraries(Cstrings_Test Cstrings)
target_link_libraries(Cstrings_Test TestSuite)
add_test(_compareIfStringsAreEqual Cstrings_Test _compareIfStringsAreEqual)
add_test(_compareIfStringsAreDiff Cstrings_Test _compareIfStringsAreDiff)

add_executable(MapEntryTest MapEntryTest.c)
target_link_libraries(MapEntryTest Map)
target_link_libraries(MapEntryTest TestSuite)
add_test(_newMapEntryCreatesANonNullReference MapEntryTest _newMapEntryCreatesANonNullReference)