add_executable(Cstrings_Test cstrings_test.c)
target_link_libraries(Cstrings_Test Cstrings)
target_link_libraries(Cstrings_Test TestSuite)
add_test(_compareIfStringsAreEqual Cstrings_Test _compareIfStringsAreEqual)
add_test(_compareIfStringsAreDiff Cstrings_Test _compareIfStringsAreDiff)

add_executable(MapEntryTest MapEntryTest.c)
target_link_libraries(MapEntryTest Map)
target_link_libraries(MapEntryTest TestSuite)
add_test(_newMapEntryCreatesANonNullReference MapEntryTest _newMapEntryCreatesANonNullReference)
add_test(_newMapEntrySiblingAttrShouldBeNull MapEntryTest _newMapEntrySiblingAttrShouldBeNull)
add_test(_keyShouldBeTheSameAsParam MapEntryTest _keyShouldBeTheSameAsParam)
add_test(_valueShouldBeTheSameAsParam MapEntryTest _keyShouldBeTheSameAsParam)
add_test(_typeShouldBeTheSameAsParam MapEntryTest _typeShouldBeTheSameAsParam)
add_test(_destroyShouldBeNotNull MapEntryTest _destroyShouldBeNotNull)