add_executable(Cstrings_Test cstrings_test.c)
target_link_libraries(Cstrings_Test Cstrings)
target_link_libraries(Cstrings_Test TestSuite)
add_test(_compareIfStringsAreEqual Cstrings_Test _compareIfStringsAreEqual)
add_test(_compareIfStringsAreDiff Cstrings_Test _compareIfStringsAreDiff)

add_executable(MapEntryTest MapEntryTest.c)
target_link_libraries(MapEntryTest Map)
target_link_libraries(MapEntryTest TestSuite)
add_test(_newMapEntryCreatesANonNullReference MapEntryTest _newMapEntryCreatesANonNullReference)
add_test(_newMapEntrySiblingAttrShouldBeNull MapEntryTest _newMapEntrySiblingAttrShouldBeNull)
add_test(_keyShouldBeTheSameAsParam MapEntryTest _keyShouldBeTheSameAsParam)
add_test(_valueShouldBeTheSameAsParam MapEntryTest _keyShouldBeTheSameAsParam)
add_test(_typeShouldBeTheSameAsParam MapEntryTest _typeShouldBeTheSameAsParam)
add_test(_destroyShouldBeNotNull MapEntryTest _destroyShouldBeNotNull)
add_test(_toStringShouldBeNotNull MapEntryTest _toStringShouldBeNotNull)
add_test(_pointerIsNullAfterDestroy MapEntryTest _pointerIsNullAfterDestroy)
add_test(_toStringHasTheExpectedFormat MapEntryTest _toStringHasTheExpectedFormat)

add_executable(MapTest MapTest.c)
target_link_libraries(MapTest Map)
target_link_libraries(MapTest TestSuite)
add_test(_newMapCreatesANonNullReference MapTest _newMapCreatesANonNullReference)
add_test(_newMapEntry_itemsAttrShouldBeNull MapTest _newMapEntry_itemsAttrShouldBeNull)
add_test(_clearShouldBeNotNull MapTest _clearShouldBeNotNull)
add_test(_delShouldBeNotNull MapTest _delShouldBeNotNull)
add_test(_getShouldBeNotNull MapTest _getShouldBeNotNull)
add_test(_hasShouldBeNotNull MapTest _hasShouldBeNotNull)
add_test(_setShouldBeNotNull MapTest _setShouldBeNotNull)
add_test(_toStringShouldBeNotNull MapTest _toStringShouldBeNotNull)
add_test(_lengthShouldBeZero MapTest _lengthShouldBeZero)
add_test(_lengthShouldChangeAfterInsertion MapTest _lengthShouldChangeAfterInsertion)
add_test(_lengthShouldChangeAfterMultInsertion MapTest _lengthShouldChangeAfterMultInsertion)
add_test(_hasReturnFalseIfThereNoItems MapTest _hasReturnFalseIfThereNoItems)
add_test(_hasReturnFalseIfThereNoMatchingItems MapTest _hasReturnFalseIfThereNoMatchingItems)
add_test(_hasReturnTrueIfTheKeyIsInTheMap MapTest _hasReturnTrueIfTheKeyIsInTheMap)
add_test(_hasReturnTrueIfTheKeyIsInTheBegginingOfTheMap MapTest _hasReturnTrueIfTheKeyIsInTheBegginingOfTheMap)
add_test(_hasReturnTrueIfTheKeyIsInTheEndingOfTheMap MapTest _hasReturnTrueIfTheKeyIsInTheEndingOfTheMap)
add_test(_hasAllTheInsertedItems MapTest _hasAllTheInsertedItems)
add_test(_getReturnNullIfThereNoItems MapTest _getReturnNullIfThereNoItems)
add_test(_allTheInsertedValuesAreCorrect MapTest _allTheInsertedValuesAreCorrect)