add_library(Map Map.c)
target_link_libraries(Map Cstrings)


add_executable(ListTest List.test.c)
target_link_libraries(ListTest Map Cstrings)
target_link_libraries(ListTest TestSuite)

add_test(newListCreatesANonNullReference ListTest newListCreatesANonNullReference)
add_test(_mapAttrShouldBeNotNull ListTest _mapAttrShouldBeNotNull)
add_test(destroyShouldBeNotNull ListTest destroyShouldBeNotNull)
add_test(lengthShouldBeNotNull ListTest lengthShouldBeNotNull)