add_library(MapEntry MapEntry.c)
target_link_libraries(MapEntry Map)

add_executable(MapEntryTest MapEntry.test.c)
target_link_libraries(MapEntryTest MapEntry TestSuite Cstrings)
add_test(_newMapEntryCreatesANonNullReference MapEntryTest _newMapEntryCreatesANonNullReference)
add_test(_newMapEntrySiblingAttrShouldBeNull MapEntryTest _newMapEntrySiblingAttrShouldBeNull)
add_test(_keyShouldBeTheSameAsParam MapEntryTest _keyShouldBeTheSameAsParam)
add_test(_valueShouldBeTheSameAsParam MapEntryTest _keyShouldBeTheSameAsParam)
add_test(_typeShouldBeTheSameAsParam MapEntryTest _typeShouldBeTheSameAsParam)
add_test(_destroyShouldBeNotNull MapEntryTest _destroyShouldBeNotNull)
add_test(_toStringShouldBeNotNull MapEntryTest _toStringShouldBeNotNull)
add_test(_toJsonStringShouldBeNotNull MapEntryTest _toJsonStringShouldBeNotNull)
add_test(_pointerIsNullAfterDestroy MapEntryTest _pointerIsNullAfterDestroy)
add_test(_toStringHasTheExpectedFormat MapEntryTest _toStringHasTheExpectedFormat)
add_test(_toStringHasTheExpectedFormatStringVal MapEntryTest _toStringHasTheExpectedFormatStringVal)
add_test(_toJsonStringHasTheExpectedFormat MapEntryTest _toJsonStringHasTheExpectedFormat)
